--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
             <div class="item_nav">
-                <img src="/img/img_nav/search HEART shopping-cart.png" alt="">
+                <img src="img/img_nav/search_HEART_shopping-cart.png" alt="">
             </div>
         </div>
     </header>
@@ -56,11 +56,11 @@
         <div class="container_2">
             <div class="left">
                 <div class="top">
-                    <img src="/img/img_container1/top_boy.jpg" alt="boy">
+                    <img src="img/img_container1/top_boy.jpg" alt="boy">
                 </div>
                 <div class="bot">
-                    <img src="/img/img_container1/left_bottom_girl.jpg" alt="">
-                    <img src="/img/img_container1/right_bottom_girl.jpg" alt="">
+                    <img src="img/img_container1/left_bottom_girl.jpg" alt="">
+                    <img src="img/img_container1/right_bottom_girl.jpg" alt="">
                 </div>
             </div>
             <div class="right">
@@ -77,25 +77,25 @@
         </div>
         <div class="container_3">
             <div class="container3_inner1">
-                <img src="/img/img_container2/1.jpg" alt="">
+                <img src="img/img_container2/1.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p> <span class="mark">$229.00</span><span class="red">$129.00</span></p>
             </div>
             <div class="container3_inner2">
-                <img src="/img/img_container2/2.jpg" alt="">
+                <img src="img/img_container2/2.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p> <span class="mark">$229.00</span><span class="red">$129.00</span></p>
             </div>
             <div class="container3_inner3">
-                <img src="/img/img_container2/3.jpg" alt="">
+                <img src="img/img_container2/3.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p> <span class="mark">$229.00</span><span class="red">$129.00</span></p>
             </div>
             <div class="container3_inner4">
-                <img src="/img/img_container2/4.jpg" alt="">
+                <img src="img/img_container2/4.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p>$ <span class="mark">229.00 </span><span class="red">$129.00</span></p>
@@ -107,25 +107,25 @@
         </div>
         <div class="container_3">
             <div class="container3_inner1">
-                <img src="/img/img_container3/1.jpg" alt="">
+                <img src="img/img_container3/1.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p> <span class="mark">$229.00</span><span class="red">$129.00</span></p>
             </div>
             <div class="container3_inner2">
-                <img src="/img/img_container3/2.jpg" alt="">
+                <img src="img/img_container3/2.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p> <span class="mark">$229.00</span><span class="red">$129.00</span></p>
             </div>
             <div class="container3_inner3">
-                <img src="/img/img_container3/3.jpg" alt="">
+                <img src="img/img_container3/3.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p> <span class="mark">$229.00</span><span class="red">$129.00</span></p>
             </div>
             <div class="container3_inner4">
-                <img src="/img/img_container3/4.jpg" alt="">
+                <img src="img/img_container3/4.jpg" alt="">
                 <p class="igure">IGURE</p>
                 <h3>GREEN MUSCLE FIT POLO SHIRT</h3>
                 <p>$ <span class="mark">229.00 </span><span class="red">$129.00</span></p>
@@ -139,11 +139,11 @@
 
         <div class="container_4">
             <div>
-                <img src="/img/img_container4/1.jpg" alt="">
+                <img src="img/img_container4/1.jpg" alt="">
             </div>
             <div>
-                <div><img src="/img/img_container4/2.jpg" alt=""></div>
-                <div><img class="bottom" src="/img/img_container4/3.jpg" alt=""></div>
+                <div><img src="img/img_container4/2.jpg" alt=""></div>
+                <div><img class="bottom" src="img/img_container4/3.jpg" alt=""></div>
                 <a href="#">SHOW WOMEN’S DRESS</a>
             </div>
         </div>
@@ -168,11 +168,11 @@
                 <p>We earned a reputation of being good at what we do.
                     Let us take your online shop to new dimension in
                     success!</p>
-                <div><a href="#"><img src="/img/img_container6/location.png" alt="point">Comilla, Bangladesh 3500</a>
+                <div><a href="#"><img src="img/img_container6/location.png" alt="point">Comilla, Bangladesh 3500</a>
                 </div>
                 <div><a class="mail" href="@">kawsarahmed0210@gmail.com</a></div>
                 <div><a href="#">01647470457</a></div>
-                <div><img src="./img/img_container6/facebook_instagram_twitter_linkedin.png" alt=""></div>
+                <div><img src="img/img_container6/facebook_instagram_twitter_linkedin.png" alt=""></div>
 
             </div>
             <div class="container_last_inerr2">
